[package]
name = "history-tidy"
description = "Tidy history list with tags"
version = "0.1.0"
authors = ["TakuKitamura <takukitamura.io@gmail.com>"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/TakuKitamura/history-tidy"

[[bin]]
name = "history-tidy"

[dependencies]
clap = "2.34.0"
dirs = "4.0.0"
conch-parser = "0.1.0"
tui = "0.16"
crossterm = "0.22"
termion = "1.5"
linked-hash-map = "0.5.4"
unicode-width = "0.1.9"